src/objects/PLM_Approval_Matrix__mdt/PLM_Approval_Matrix__mdt.object-meta.xml
<CustomObject>
    <label>PLM Approval Matrix</label>
    <pluralLabel>PLM Approval Matrix</pluralLabel>
</CustomObject>