src/objects/PLM_Approval_Matrix__mdt/fields/Configuration_Segment4__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Segment4__c</fullName>
    <label>Configuration (Segment4)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>