src/objects/PLM_Approval_Matrix__mdt/fields/ConfigurationNotOperator__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationNotOperator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ConfigurationNotOperator</label>
    <type>Checkbox</type>
</CustomField>