src/objects/PLM_Approval_Matrix__mdt/fields/Detector_Segment7__c.field-meta.xml
<CustomField>
    <fullName>Detector_Segment7__c</fullName>
    <label>Detector (Segment7)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>