src/objects/PLM_Approval_Matrix__mdt/fields/DetectorNotOperator__c.field-meta.xml
<CustomField>
    <fullName>DetectorNotOperator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DetectorNotOperator</label>
    <type>Checkbox</type>
</CustomField>