src/objects/PLM_Approval_Matrix__mdt/fields/Family_Segment2__c.field-meta.xml
<CustomField>
    <fullName>Family_Segment2__c</fullName>
    <label>Family (Segment2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>