src/objects/PLM_Approval_Matrix__mdt/fields/FamilySegmentNotOperator__c.field-meta.xml
<CustomField>
    <fullName>FamilySegmentNotOperator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FamilySegmentNotOperator</label>
    <type>Checkbox</type>
</CustomField>