src/objects/PLM_Approval_Matrix__mdt/fields/Form_Factor_Segment3__c.field-meta.xml
<CustomField>
    <fullName>Form_Factor_Segment3__c</fullName>
    <label>Form Factor (Segment3)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>