src/objects/PLM_Approval_Matrix__mdt/fields/FormFactorNotOperator__c.field-meta.xml
<CustomField>
    <fullName>FormFactorNotOperator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FormFactorNotOperator</label>
    <type>Checkbox</type>
</CustomField>