src/objects/PLM_Approval_Matrix__mdt/fields/IT_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_Rule_Name__c</fullName>
    <label>IT Rule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>