src/objects/PLM_Approval_Matrix__mdt/fields/Laser_Segment6__c.field-meta.xml
<CustomField>
    <fullName>Laser_Segment6__c</fullName>
    <label>Laser (Segment6)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>