src/objects/PLM_Approval_Matrix__mdt/fields/LaserNotOperator__c.field-meta.xml
<CustomField>
    <fullName>LaserNotOperator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LaserNotOperator</label>
    <type>Checkbox</type>
</CustomField>