src/objects/PLM_Approval_Matrix__mdt/fields/Market_Application_Segment5__c.field-meta.xml
<CustomField>
    <fullName>Market_Application_Segment5__c</fullName>
    <label>Market Application (Segment5)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>