src/objects/PLM_Approval_Matrix__mdt/fields/MarketAppNotOperator__c.field-meta.xml
<CustomField>
    <fullName>MarketAppNotOperator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MarketAppNotOperator</label>
    <type>Checkbox</type>
</CustomField>