src/objects/PLM_Approval_Matrix__mdt/fields/Product_Group_Segment1__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Segment1__c</fullName>
    <label>Product Group (Segment1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>