src/objects/PLM_Approval_Matrix__mdt/fields/Upper_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Upper_Approval_Level__c</fullName>
    <label>Upper Approval Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>