src/objects/PLM_Approval_Matrix__mdt/listViews/Approval_Matrix.listView-meta.xml
<ListView>
    <fullName>Approval_Matrix</fullName>
    <columns>MasterLabel</columns>
    <columns>IT_Rule_Name__c</columns>
    <columns>Approver__c</columns>
    <columns>ConfigurationNotOperator__c</columns>
    <columns>Detector_Segment7__c</columns>
    <columns>DetectorNotOperator__c</columns>
    <columns>Family_Segment2__c</columns>
    <columns>FamilySegmentNotOperator__c</columns>
    <columns>Form_Factor_Segment3__c</columns>
    <columns>FormFactorNotOperator__c</columns>
    <filterScope>Everything</filterScope>
    <label>Approval Matrix</label>
</ListView>